--- a/root/src/example.jade
+++ b/root/src/example.jade
@@ -1,15 +1,15 @@
 link(rel="import" href="bower_components/polymer/polymer.html")
 
-polymer-element(name="<% name %>" attributes="")
+polymer-element(name="<%= name %>" attributes="")
 
   template
 
-    link(rel="stylesheet" href="<% name %>.css")
+    link(rel="stylesheet" href="<%= name %>.css")
 
-    h1 Hello from <% name %>!
+    h1 Hello from <%= name %>!
 
   script
     :coffeescript
-      Polymer('<% name %>',
+      Polymer('<%= name %>',
         ready: () ->
-          console.log '<% name %> is ready!'
+          console.log '<%= name %> is ready!'
